--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
   <body>
     <div class="page">
       <h1>Testing Some Stuff!</h1>
+
+        <div class="cardContainer">
+            <div class="card show">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+            <div class="card">This is a card</div>
+        </div>
+
+
+
+
     </div>
   </body>
 </html>
