show on BORDER VIS...need to switch to show on FULL ELEMENT VIS

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Testing Some Stuff!</h1>
 
         <div class="cardContainer">
-            <div class="card show">This is a card</div>
+            <div class="card">This is a card</div>
             <div class="card">This is a card</div>
             <div class="card">This is a card</div>
             <div class="card">This is a card</div>
