direction per class experiment

--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
       <h1>Testing Some Stuff!</h1>
 
         <div class="cardContainer">
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
-            <div class="card">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
+            <div class="card fromLeft">This is a card</div>
+            <div class="card fromRight">This is a card</div>
         </div>
 
 
