flexboxgrid and flexbox experiments

--- a/index.html
+++ b/index.html
@@ -12,28 +12,49 @@
     <div class="page">
       <h1>Testing Some Stuff!</h1>
 
-        <div class="cardContainer">
+      <div class="cardContainer">
+        <div class="duoContainer col-xs-12">
+          <div class="col-xs-12 col-md-4">
             <div class="card fromLeft">This is a card</div>
+          </div>
+          <div class="col-xs-12 col-md-4">
             <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
-            <div class="card fromLeft">This is a card</div>
-            <div class="card fromRight">This is a card</div>
+          </div>
+     
         </div>
 
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
 
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
 
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
 
+        <div class="duo-container col-xs-12 col-md-6">
+          <div class="card fromLeft">This is a card</div>
+          <div class="card fromRight">This is a card</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
