--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <hbead>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Intersection Observer Tests</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css" />
-  </head>
+  </hbead>
   <body>
     <div class="page">
       <h1>Testing Some Stuff!</h1>
 
       <div class="cardContainer">
-        <div class="duoContainer col-xs-12">
-          <div class="col-xs-12 col-md-4">
+        <div class="duoContainer">
+          <div class="col-xs-12 col-md-6">
             <div class="card fromLeft">This is a card</div>
           </div>
-          <div class="col-xs-12 col-md-4">
+          <div class="col-xs-12 col-md-6">
             <div class="card fromRight">This is a card</div>
           </div>
      
